Replace deprecated APIs (#174)
Use `try`-with-resources where appropriate which
also replaces `IOUtils::closeQuietly`.